--- a/index.html
+++ b/index.html
@@ -5,11 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/5dbe99caa8.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 
 <body>
-    
+    <header>
+        <div class="header">
+            <div class="wrapper">
+                <!-- row -->
+                <div class="row">
+                    <div class="col-1">
+                        <button><i class="fas fa-bars"></i></button>
+                    </div>
+                    <div class="col-7">
+                        <nav>
+                            <ul class="row">
+                                <li class="col-auto"><a href="#main">main</a></li>
+                                <li class="col-auto"><a href="#about">about</a></li>
+                                <li class="col-auto"><a href="#experience">experience</a></li>
+                                <li class="col-auto"><a href="#portfolio">portfolio</a></li>
+                                <li class="col-auto"><a href="#contacts">contacts</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <!--  -->
+                <div>
+                    <img src="" alt="">
+                    <h1>Yuliana Hazda</h1>
+                    <p>Front-end developer</p>
+                    <ul>
+                        <li><a href="https://twitter.com/yulianahazda"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/yuliana-hazda-b0ab711a8/"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <main></main>
+    <footer></footer>
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
