Add images of projects, updates

--- a/index.html
+++ b/index.html
@@ -565,6 +565,81 @@
                 </section>
             </div>
         </section>
+
+        <section id="portfolio">
+            <div class="portfolio">
+                <div class="wrapper">
+                    <ul class="portfolio__list row">
+                        <li class="portfolio__item col-4">
+                            <div class="image__container">
+                                <img src="./assets/project-1.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">Arora</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="portfolio__item col-4">
+                            <div class="image__container">
+                                <img src="./assets/project-2.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">Captured</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="portfolio__item col-4">
+                            <div class="image__container">
+                                <img src="./assets/project-3.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">Vscode shortcut PRO</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="portfolio__item col-4">
+                            <div class="image__container">
+                                <img src="./assets/project-4.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">travelAsk</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="portfolio__item col-4">
+                            <div class="image__container">
+                                <img src="./assets/project-5.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">Kombucha Lab</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="portfolio__item col-4 class=">
+                            <div class="image__container">
+                                <img src="./assets/project-6.jpg" alt="">
+                                <a href="">
+                                    <div class="overlay">
+                                        <i class="col-2 fas fa-chevron-circle-right"></i>
+                                        <h3 class="col-10">Shopper-mapper</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="footer">
