--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <div class="parent">
         <!-- navigation -->
-        <div class="offcanvas__wrap">
+        <div class="offcanvas__wrap" id="home">
             <nav>
-                <!-- <div class="wrapper"> -->
                 <div class="nav">
                     <div class="row">
                         <div class="col-9 row">
@@ -36,14 +35,13 @@
                         </div>
                     </div>
                 </div>
-                <!-- </div> -->
             </nav>
 
             <!-- header -->
             <header id="header" id="home">
                 <div class="wrapper">
                     <div class="header">
-                        <div class="col col-4">
+                        <div class="col col-5">
                             <div class="header__image row">
                                 <img class="col-6" src="./assets/portfolio-2.jpg" alt="">
                             </div>
@@ -110,7 +108,7 @@
         <section id="about" data-letter="e">
             <div class="wrapper">
                 <div class="about">
-                    <div class="row">
+                    <div class="row row--column">
                         <div class="col-8 about__profile">
                             <div class="about__intro">
                                 <h2>About me</h2>
@@ -122,12 +120,12 @@
                             </div>
                             <div class="about__skills">
                                 <h2>Skills</h2>
-                                <ul class="row about__skills--list">
-                                    <li class="col-2 skills__item">
+                                <ul class="row about__skills__list">
+                                    <li class="col-2 skill-item">
                                         <h3>HTML5</h3>
                                         <div id="chart" class="chart chart__1">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -145,11 +143,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>CCS3</h3>
                                         <div class="chart chart__2">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -167,11 +165,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skills-item">
                                         <h3>SCSS</h3>
                                         <div class="chart chart__3">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -189,11 +187,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skills-item">
                                         <h3>Javascript</h3>
                                         <div class="chart chart__4">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -211,11 +209,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>React</h3>
                                         <div class="chart chart__5">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -233,11 +231,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>jQuery</h3>
                                         <div class="chart chart__6">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -255,11 +253,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>Firebase</h3>
                                         <div class="chart chart__7">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -277,11 +275,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>Git</h3>
                                         <div class="chart chart__8">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -299,11 +297,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>Github</h3>
                                         <div class="chart chart__9">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -321,11 +319,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>Vscode</h3>
                                         <div class="chart chart__10">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -343,11 +341,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>Accesibility</h3>
                                         <div class="chart chart__11">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -365,11 +363,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>RWD</h3>
                                         <div class="chart chart__12">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -387,11 +385,11 @@
                                             </svg>
                                         </div>
                                     </li>
-                                    <li class="col-2 skills__item">
+                                    <li class="col-2 skill-item">
                                         <h3>API's</h3>
                                         <div class="chart chart__13">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="80"
-                                                height="80" xmlns="http://www.w3.org/2000/svg">
+                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
+                                                height="65" xmlns="http://www.w3.org/2000/svg">
                                                 <circle class="circle-chart__background" stroke="#efefef"
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
@@ -793,18 +791,25 @@
     <footer id="footer">
         <div class="footer">
             <div class="row row--column">
-                <form class="col-12 form" action="">
+                <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="#main"
+                    netlify-honeypot="bot-field">
+                    <div hidden aria-hidden="true">
+                        <label>
+                            Don’t fill this out if you're human:
+                            <input name="bot-field" />
+                        </label>
+                    </div>
                     <div class="row row--between">
                         <h2 class="col-auto">Contact</h2>
                         <button type="button" class="col-auto btn btn__circle"><i class="far fa-circle"></i></button>
                     </div>
                     <div class="border">
                         <label class="sr-only" for="name">Name:</label>
-                        <input type="text" name="name" id="name" placeholder="name" required>
+                        <input class="input__name" type="text" name="name" id="name" placeholder="name" required>
                     </div>
                     <div class="border">
                         <label class="sr-only" for="">Email</label>
-                        <input type="email" name="email" id="email" placeholder="e-mail" required>
+                        <input class="input__name" type="email" name="email" id="email" placeholder="e-mail" required>
                     </div>
                     <div class="border">
                         <textarea name="massage" placeholder="Message"></textarea>
