Update form action attribute

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
     <footer id="footer">
         <div class="footer">
             <div class="row row--column">
-                <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="#main"
+                <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="/#contact"
                     netlify-honeypot="bot-field">
                     <div hidden aria-hidden="true">
                         <label>
