--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="scroll__indicator">
+                <div class="scroll-indicator">
                     <div class="dots"></div>
                 </div>
             </header>
@@ -791,6 +791,12 @@
     <footer id="footer">
         <div class="footer">
             <div class="row row--column">
+                <div class="col-12">
+                    <div class="footer__title">
+                        <h2 class="col-auto">Contact</h2>
+                        <button type="button" class="col-auto btn btn__circle"><i class="far fa-circle"></i></button>
+                    </div>
+                </div>
                 <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="/#contact"
                     netlify-honeypot="bot-field">
                     <div hidden aria-hidden="true">
@@ -799,53 +805,22 @@
                             <input name="bot-field" />
                         </label>
                     </div>
-                    <div class="row row--between">
-                        <h2 class="col-auto">Contact</h2>
-                        <button type="button" class="col-auto btn btn__circle"><i class="far fa-circle"></i></button>
+                    <div class="form__success">
+                        <p>Thanks for contact. I will reach out to you shortly!</p>
                     </div>
-                    <div class="border">
+                    <div class="form__item">
                         <label class="sr-only" for="name">Name:</label>
-                        <input class="input__name" type="text" name="name" id="name" placeholder="name" required>
+                        <input class="input__name" type="text" name="name" id="name" placeholder="Name" required>
                     </div>
-                    <div class="border">
+                    <div class="form__item">
                         <label class="sr-only" for="">Email</label>
-                        <input class="input__name" type="email" name="email" id="email" placeholder="e-mail" required>
+                        <input class="input__name" type="email" name="email" id="email" placeholder="E-mail" required>
                     </div>
-                    <div class="border">
+                    <div class="form__item">
                         <textarea name="massage" placeholder="Message"></textarea>
                     </div>
                     <button class="btn btn__send" type="submit">send</button>
                 </form>
-
-                <div class="col-12">
-                    <h2>Keep in touch</h2>
-                    <ul class="footer__list">
-                        <li class="row footer__item">
-                            <div class="col-4">
-                                <p class="footer__contact">email</p>
-                            </div>
-                            <div class="col-8">
-                                <p>yulianahazda@gmail.com</p>
-                            </div>
-                        </li>
-                        <li class="row footer__item">
-                            <div class="col-4">
-                                <p class="footer__contact">phone</p>
-                            </div>
-                            <div class="col-8">
-                                <p>+1(647)-777-8888</p>
-                            </div>
-                        </li>
-                        <li class="row footer__item">
-                            <div class="col-4">
-                                <p class="footer__contact">website</p>
-                            </div>
-                            <div class="col-8">
-                                <a href="https://yuliana.dev/" target="_blank" rel="noreferrer noopener">yuliana.dev</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     </footer>
